--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <title>Врач-эндокринолог, бесплатная онлайн-консультация</title>
 <meta name="description" content="Врач-эндокринолог, бесплатная онлайн-консультация, высокий стаж">
-<meta name="keywords" content="Врач-эндокринолог, бесплатная онлайн-консультация, высокий стаж, щитовидная желеха, сахарный диабет, гипотиреох, аддисона, надпочечники">
+<meta name="keywords" content="Врач-эндокринолог, бесплатная онлайн-консультация, высокий стаж, щитовидная желеха, сахарный диабет, гипотиреоз, аддисона, надпочечники">
 
 
     <meta name="author" content="">
@@ -60,41 +60,8 @@
                 </div>
             </div><!-- container -->
         </div>
-    </div><div class="pixfort_gym_13 medical_intro" id="section_medical_2">
-        <div class="join_us_section pix_builder_bg" style="outline-offset: -3px;">
-            <div class="container">
-                <div class="sixteen columns">
-                    <div class="six columns">
-                        <div class="pix_form_area">
-                            <div class="substyle pix_builder_bg">
-                                <div class="title-style">
-                                    <span class="editContent"><span class="pix_text">Записаться на прием</span></span>
-                                </div><br>
-                                <div class="text-style">
-                                    <span class="editContent"><span class="pix_text">Заполните форму и мы с вами свяжемся</span></span>
-                                </div><br>
-                                <div class="clearfix"></div>
-                                <form id="contact_form" pix-confirm="hidden_pix_13">
-                                    <div id="result"></div>
-                                        <input type="text" name="name" id="name" placeholder="Ваше Имя" class="pix_text">
-                                        <input type="email" name="email" id="email" placeholder="Ваш Email" class="pix_text">
-                                        <input type="date" name="date" id="number" max="2019-09-09" class="pix_text">
-                                        <input type="text" name="message" id="message" placeholder="Ваше сообщение" class="pix_text">
-                                        <span class="send_btn">
-                                            <button id="submit_btn_13" class="slow_fade pix_text">
-                                                <span class="editContent" style="">Записаться!</span>
-                                            </button>
-                                        </span>
-                                </form>
-                                <div class="clearfix"></div>
-                            </div>
-                            <div class="note_contact pix_builder_bg"><span class="editContent"><span class="pix_text">*Note: Bundle ends in two weeks from now.</span></span></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </div>
+
 
 
     <!-- ========================================================================================================= -->
@@ -124,14 +91,36 @@
             </div>
         </div>
     </div>
+    <!--- -->
+        <div class="pixfort_gym_13 medical_intro" id="section_medical_2">
+        <div class="join_us_section pix_builder_bg" style="outline-offset: -3px;">
+            <div class="container">
+                <div class="sixteen columns">
+                    <div class="twelve columns">
+                        <div class="pix_form_area">
+                            
+                                <div class="clearfix"></div>
+                                    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSf9Cr_njVaa93VFspMXdoCvVPu4Trsv3OoSUUPZoCRu2cbkTg/viewform?embedded=true" width="700" height="500" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>
+                                <div class="clearfix"></div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- ========================================================================================================= -->
     <div class="section_pointer" pix-name="16_medical"></div><div class="pixfort_normal_1" id="section_normal_4_2">
         <div class="m6_style pix_builder_bg">
             <div class="container">
                 <div class="sixteen columns">
                     <div class="eight columns  alpha">
-                        <img src="images/uploads/mwIWyxU3_400x400.jpeg" class="img_style" alt="" style="border-radius: 0px; border-color: rgb(68, 68, 68); border-style: none; border-width: 1px; width: 450px; height: 350px;">
+                        <img src="images/uploads/mwIWyxU3_400x400.jpeg" class="img_style" alt="" style="border-radius: 0px; border-color: rgb(68, 68, 68); border-style: none; border-width: 1px; width: 450px; height: 450px;">
                     </div>
+
+
+
+
                     <div class="eight columns  omega">
                         <div class="gtext_style">
                             <p class="t1_style editContent">Врач-эндокринолог</p>
@@ -262,7 +251,12 @@
                         </div>
                     </div>
             </div>
-        </div><div class="pix_builder_bg dark" id="section_footer_5_dark" style="outline-offset: -3px; background-color: rgb(51, 51, 51); padding-top: 0px; padding-bottom: 0px; box-shadow: none; border-color: rgb(255, 255, 255); background-size: auto; background-attachment: scroll; background-repeat: no-repeat;" src="images/uploads/free-icon-healthcare-372332-download-icon-healthcare-372332-free-healthcare-png-512_512.jpg">
+        </div>
+
+
+
+
+        <div class="pix_builder_bg dark" id="section_footer_5_dark" style="outline-offset: -3px; background-color: rgb(51, 51, 51); padding-top: 0px; padding-bottom: 0px; box-shadow: none; border-color: rgb(255, 255, 255); background-size: auto; background-attachment: scroll; background-repeat: no-repeat;" src="images/uploads/free-icon-healthcare-372332-download-icon-healthcare-372332-free-healthcare-png-512_512.jpg">
         <div class="footer3">
             <div class="container ">
                 <div class="sixteen columns ">
